fixed overflow on small devices

--- a/assets/css/secret-page.css
+++ b/assets/css/secret-page.css
@@ -9,6 +9,12 @@ body {
   color: #fff;
   overflow-x: hidden;
 }
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+}
 
 /* Base styles for the scrollbar */
 ::-webkit-scrollbar {
